src/test/resources/fail/cyclicpackage/a/A2.scala
package fail.cyclicpackage.a
import acyclic.file
class A2 {

}
